# rustdex

./: .gitignore  CHANGELOG.md  Cargo.toml  NPM_SETUP.md  README.md  copy-secrets.sh  export-cert-for-github.sh  publish-npm.sh
.github/workflows/: README.md  release.yml  test-macos-signing.yml  test-macos-x64.yml
npm/: .npmignore  README.md  index.js  install.js  package.json  uninstall.js
src/: embedding.rs  indexer.rs  main.rs  mcp.rs  parser.rs  route_extractor.rs  search.rs  storage.rs  watcher.rs
test_repo/: hello.py  lib.rs
