[package]
name = "rustdex"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-ruby = "0.23"
tree-sitter-vue-next = "0.1"
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] } 
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
